[misc] silence maven-compiler-plugin warnings